--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -682,6 +682,14 @@ body {
 a {
   transition: color 0.6s;
 }
+.cid-sNDt6WaRUy {
+  background-image: url("../../../assets/images/samochody-osobowe-w-leasingu-superauto.pl-mobile-600x380.jpg");
+}
+.cid-sNDtaqq31v {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
 .cid-sNCZIXERbc {
   padding-top: 0rem;
   padding-bottom: 0rem;
